fix z-index mobile problem

--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -24,11 +24,6 @@ body {
   background-color: #eee;
   color: #111827;
 }
-#popup {
-  z-index: 9999999;
-  transform: translateZ(2rem);
-  -webkit-transform: translateZ(2rem);
-}
 
 
 h1 {
